--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
+    - name: Build for riscv64
       run: ./build.sh
     
-    - name: Test
+    - name: Test on default arch
       run: go test -v ./...
-      env:
-        GOARCH: riscv64
-        GOOS: linux
